tests/e2e/pass/v1_len_array.ep
# EXIT: 32
# STDOUT: 3
# STDOUT: 9
fun main(): void {
    let s = "abc"
    let xs = new i64[9]
    xs[0] = 10
    xs[1] = 20
    println(str(len(s)))
    println(str(len(xs)))
    exit(len(s) + len(xs) + xs[1])
}
