tests/e2e/fail/v9_fail_map_missing_key.ep
# EXIT: 1
# STDOUT_CONTAINS: runtime panic: map missing key
fun main(): void {
    let ids = new map[str]i64
    let x = ids["missing"]
    println(str(x))
}
